[package]
name = "painter-rs"
version = "0.1.0"
authors = ["Bert Peters <bert@bertptrs.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-slice-cast = "0.3.5"
cairo-rs = { version = "0.9.1", default_features = false, features = [ "png" ] }
rand = "0.7.3"
rand_distr = "0.2.2"
